<?xml version="1.0"?>
<package format="2">
    <name>map_render_engine</name>
    <version>1.0.0</version>
    <description>Map Rendering Engine For Touchscreen</description>
    <maintainer email="yuanqichau@gmail.com">Chau Yuan Qi</maintainer>
    <license>TBC</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>message_filters</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_sensor_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>cv_bridge</depend>

</package>
